fix the scrollbar problem in story-content and the signup page password tips

--- a/frontend/css/mainApp.css
+++ b/frontend/css/mainApp.css
@@ -196,6 +196,7 @@ div.row.top-buffer {
   height: 50%;
   margin-left: -1.2em;
   margin-right: 0;
+  overflow: auto;
 }
 
 #saved-title {
